# medlive_AI

./: .env.example  .gitignore  DEMO_SCRIPT.md  README.md  deploy.sh  gemini.md
agent/: .dockerignore  .gcloudignore  Dockerfile  pyproject.toml
agent/src/: __init__.py  agent.py  calendar_service.py
agent/tests/: __init__.py  test_agent.py
docs/: architecture.excalidraw  generate_arch.excalidraw
frontend/: .dockerignore  Dockerfile  cloudbuild.yaml  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/records/: route.ts
frontend/src/app/api/token/: route.ts
frontend/src/app/doctor/: page.tsx
frontend/src/components/: AvatarDisplay.tsx  ConnectionStatus.tsx  ConsultationRoom.tsx  FormField.tsx  PatientIntakeForm.tsx  UserVideo.tsx
frontend/src/hooks/: usePatientForm.ts
frontend/src/lib/: google_webrtc.ts  livekit.ts
frontend/src/types/: form.ts
