[project]
name = "medlive-agent"
version = "0.1.0"
description = "AI-powered medical triage agent with Gemini Live API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[google,silero,anam,images]~=1.4",
    "python-dotenv>=1.0.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
